// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render as checked 1`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={false}
    id="mockName"
    name="mockName"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;

exports[`Switch should render as disabled 1`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={true}
    id="mockName"
    name="mockName"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;

exports[`Switch should render with a label 1`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={true}
    id="mockName"
    name="mockName"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;

exports[`Switch should render with the correct props 1`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={false}
    id="mockName"
    name="mockName"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;

exports[`Switch should set the name and id props correctly 1`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={false}
    id="mockId"
    name="mockName"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;

exports[`Switch should set the name and id props correctly 2`] = `
<Fragment>
  <Switch
    checked={false}
    className="switch"
    disabled={false}
    id="mockId"
    name="mockId"
    onChange={[Function]}
    value={true}
  />
</Fragment>
`;
